--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             SUNDAR C
         </div>
         <div class="navlinks">
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">Education</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Projects</a></li>
         </div>
@@ -36,7 +36,7 @@
                 </span>
             </div>
             <div class="menu-links">
-                <li><a href="#" onclick="sidebar()">About</a></li>
+                <li><a href="about.html" onclick="sidebar()">Education</a></li>
                 <li><a href="#" onclick="sidebar()">Contact</a></li>
                 <li><a href="#" onclick="sidebar()">Projects</a></li>
             </div>
@@ -59,8 +59,13 @@
         </div>
         <div class="cv">
 
-            <button class="btn">Download CV</button>
+            <button class="btn" onclick="window.open('./assets/sundarresume.pdf')">Download CV</button>
 
+        </div>
+        <div class="socials">
+            <img src="./assets/pngwing.com.png" alt="git" onclick="location.href='https://github.com/Sundar2k4'">
+            <img src="./assets/linkedin.png" alt="git"
+                onclick="location.href='https://www.linkedin.com/in/sundar-c-488460248'">
         </div>
     </div>
     <div id="threejs"></div>
