--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 <body>
     <nav id="navv">
         <div class="logo">
-            SUNDAR C
+            <a href="index.html">SUNDAR C</a>
+
         </div>
         <div class="navlinks">
             <li><a href="about.html">Education</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="skills.html">Skills</a></li>
             <li><a href="#">Projects</a></li>
         </div>
     </nav>
@@ -37,7 +38,7 @@
             </div>
             <div class="menu-links">
                 <li><a href="about.html" onclick="sidebar()">Education</a></li>
-                <li><a href="#" onclick="sidebar()">Contact</a></li>
+                <li><a href="skills.html" onclick="sidebar()">Skills</a></li>
                 <li><a href="#" onclick="sidebar()">Projects</a></li>
             </div>
         </div>
