--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
     <button class="click" onclick="window.location.href='projects.html'">Click For More >></button>
     <script src="script.js"></script>
     <script type="module" src="main.js"></script>
+    <footer class="foot">
+        <p>SUNDAR_C</p>
+        <p> <a href="https://g.co/kgs/GhCVuJB" style="color: white;">📍Sholavaram,Thiruvallur</a></p>
+        <div class="linkies">
+
+            <ul>
+                <li style="color: white;">Contacts</li>
+                <li><a href="https://github.com/Sundar2k4">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/sundar-c-488460248">LinkedIn</a></li>
+                <li><a href="mailto:csundar2004@gmail.com">Email</a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
