--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,14 @@
         <p>Projects</p>
         <p style=" font-family:Arial, Helvetica, sans-serif;font-size:5vh;color:grey">View My Works</p>
     </div>
+    <div class="info">
+        <img src="./assets/sproject.gif" alt="">
+        <p>
+            Welcome to my Projects Page! Here, you'll find a showcase of my work, crafted with a focus on clean
+            interfaces, user-friendly designs, and robust functionality. Each project reflects my commitment to modern
+            development practices and creative problem-solving, ensuring scalability and an engaging user experience.
+        </p>
+    </div>
     <div class="projectss">
         <div class="block1" onclick="window.open('https://grand-mark-hotel-reservator-client.vercel.app/')">
             <img src="./assets/grandmark.png" alt="">
@@ -28,13 +36,21 @@
             <img src="./assets/ancient gallery.png" alt="">
             <p>Ancient Art Gallery</p>
         </div>
-        <div class="block1" onclick="window.open('https://sundar2k4.github.io/ancient-gallery/')">
-            <img src="./assets/ancient gallery.png" alt="">
-            <p>Ancient Art Gallery</p>
+        <div class="block1" onclick="window.open('https://calcyxi.netlify.app/')">
+            <img src="./assets/calcyx.png" alt="">
+            <p>calculator</p>
         </div>
-        <div class="block1" onclick="window.open('https://sundar2k4.github.io/ancient-gallery/')">
-            <img src="./assets/ancient gallery.png" alt="">
-            <p>Ancient Art Gallery</p>
+        <div class="block1" onclick="window.open('https://smart-traffic-system.netlify.app/')">
+            <img src="./assets/traffic.png" alt="">
+            <p>Smart Traffic System</p>
+        </div>
+        <div class="block1" onclick="window.open('https://galleryxphotoze.netlify.app/')">
+            <img src="./assets/gallery.png" alt="">
+            <p>Gallery</p>
+        </div>
+        <div class="block1" onclick="window.open('https://gleeful-otter-7bd4c1.netlify.app/')">
+            <img src="./assets/dataform.png" alt="">
+            <p>Data Form</p>
         </div>
     </div>
 </body>
