--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="content">
             <p class="contents">
                 A motivated Computer Science student passionate
-                about web development, applications, and cybersecurity.
+                about web development, applications, and Technology.
             </p>
         </div>
         <div class="cv">
