--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,25 @@
         </p>
     </div>
     <div class="projectss">
-        <div class="block1" onclick="window.open('https://grand-mark-hotel-reservator-client.vercel.app/')">
+        <div class="block1" onclick="window.open('https://grandmark-hotelreservator-client.onrender.com/')">
             <img src="./assets/grandmark.png" alt="">
             <p>Grandmark Hotel Reservator</p>
         </div>
-        <div class="block1" onclick="window.open('https://sundar2k4.github.io/ancient-gallery/')">
+        <div class="block1" onclick="window.open('https://ancient-gallery-frontend.onrender.com/')">
             <img src="./assets/ancient gallery.png" alt="">
-            <p>Ancient Art Gallery</p>
+            <p>Artifactarium Ancient Art Gallery</p>
+        </div>
+        <div class="block1" onclick="window.open('https://waitertab-client.onrender.com/')">
+            <img src="./assets/Screenshot 2025-04-23 114415.png" alt="">
+            <p>WaiterTab</p>
+        </div>
+        <div class="block1" onclick="window.open('https://one1millioncraft-frontend.onrender.com/')">
+            <img src="./assets/Screenshot 2025-04-23 115013.png" alt="">
+            <p>SKU Generator</p>
+        </div>
+        <div class="block1" onclick="window.open('https://cirp-frontend.onrender.com')">
+            <img src="./assets/Screenshot 2025-04-23 145215.png" alt="">
+            <p>collaborative Idea Research Platform(Prototype)</p>
         </div>
         <div class="block1" onclick="window.open('https://calcyxi.netlify.app/')">
             <img src="./assets/calcyx.png" alt="">
