--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="cv">
 
-            <button class="btn" onclick="window.open('./assets/resume_final.pdf')">Download CV</button>
+            <button class="btn" onclick="window.open('./assets/Sundarcv.pdf')">Download CV</button>
 
         </div>
         <div class="socials">
