--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         <p style=" font-family:Arial, Helvetica, sans-serif;font-size:5vh;color:grey">Browse My Projects</p>
     </div>
     <div class="projects">
-        <div class="block1" onclick="window.open('https://grand-mark-hotel-reservator-client.vercel.app/')">
+        <div class="block1" onclick="window.open('https://grandmark-hotelreservator-client.onrender.com/')">
             <img src="./assets/grandmark.png" alt="">
             <p>Grandmark Hotel Reservator</p>
         </div>
-        <div class="block1" onclick="window.open('https://sundar2k4.github.io/ancient-gallery/')">
+        <div class="block1" onclick="window.open('https://ancient-gallery-frontend.onrender.com/')">
             <img src="./assets/ancient gallery.png" alt="">
             <p>Ancient Art Gallery</p>
         </div>
