--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,10 @@
             <img src="./assets/Screenshot 2025-04-23 115013.png" alt="">
             <p>SKU Generator</p>
         </div>
+        <div class="block1" onclick="window.open('https://microjournal-frontend.onrender.com/')">
+            <img src="./assets/MultiPlanner.png" alt="">
+            <p>MultiPlanner</p>
+        </div>
         <div class="block1" onclick="window.open('https://cirp-frontend.onrender.com')">
             <img src="./assets/Screenshot 2025-04-23 145215.png" alt="">
             <p>collaborative Idea Research Platform(Prototype)</p>
