--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <div class="content-container">
         <div class="data">
             <div class="image-container">
-                <img src="./assets/personal.jpg" alt="myimage">
+                <img src="./assets/proffphoto.jpg" alt="myimage">
             </div>
             <div class="experience">
                 <img src="./assets/driver-license.png" alt="">
