--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,10 @@
             <img src="./assets/MultiPlanner.png" alt="">
             <p>MultiPlanner</p>
         </div>
+        <div class="block1" onclick="window.open('https://yourday-frontend.onrender.com/')">
+            <img src="./assets/Screenshot 2025-11-21 092350.png" alt="">
+            <p>YourDay</p>
+        </div>
         <div class="block1" onclick="window.open('https://cirp-frontend.onrender.com')">
             <img src="./assets/Screenshot 2025-04-23 145215.png" alt="">
             <p>collaborative Idea Research Platform(Prototype)</p>
@@ -63,6 +67,10 @@
         <div class="block1" onclick="window.open('https://galleryxphotoze.netlify.app/')">
             <img src="./assets/gallery.png" alt="">
             <p>Gallery</p>
+        </div>
+        <div class="block1" onclick="window.open('https://rockpaperscissor90.onrender.com/')">
+            <img src="./assets/Screenshot 2025-11-21 092823.png" alt="">
+            <p>RockPaperScissor</p>
         </div>
         <div class="block1" onclick="window.open('https://gleeful-otter-7bd4c1.netlify.app/')">
             <img src="./assets/dataform.png" alt="">
